# mnemosyne

./: .env.example  .gitignore  README.md  devplan.md  pyproject.toml  test_env_parse.py
.github/workflows/: ci.yml  gh-pages.yml
deploy/: docker-compose.yml  vault-cli.service
docs/: README.md  cli.md  development.md  faq.md  index.md  telegram.md  tui.md
mnemosyne/: __init__.py  config.py
mnemosyne.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mnemosyne/agent/: loop.py  schemas.py  tools.py
mnemosyne/db/: connection.py
mnemosyne/frontends/: cli.py  organize.py  telegram_bot.py  tui.py
mnemosyne/mnemosyne.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mnemosyne/services/: embed.py  index.py  related.py  vault.py  writes.py
tests/: test_agent_tools.py  test_audit_log_path.py  test_cli.py  test_cli_markup.py  test_e2e_cli.py  test_edge_security.py  test_embed.py  test_index.py  test_ollama_e2e.py  test_related.py  test_suggest_links_only_links.py  test_suggest_links_tags.py  test_vault.db  test_vault.py  test_writes.py
tests/test_vault/: PlanTitle.md
